# GHR2.0-Being-Notified

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20260228060000_initial_schema.sql  20260228120000_user_profiles.sql  20260301062600_add_google_refresh_token_to_user_profiles.sql  20260301073500_add_merchant_encrypted_to_transactions.sql
backend/src/: main.rs
backend/src/auth/: google.rs  handlers.rs  mod.rs
backend/src/crypto/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: goal.rs  mod.rs  transaction.rs  user.rs
backend/src/routes/: dashboard.rs  literacy.rs  mod.rs  onboarding.rs  profile.rs  spend_analysis.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/advisor/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/goals/: page.tsx
frontend/src/app/literacy/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/savings/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/app/simulator/: page.tsx
frontend/src/app/spend-analysis/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/hooks/: useFinancialData.ts
frontend/src/lib/: ai-stream.ts  utils.ts  webauthn.ts
